--- a/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
+++ b/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
@@ -12,12 +12,12 @@
 
         <div class="form-group">
             <label th:for="image">옷장 내부를 보고싶으면 클릭해보세요.</label>
-            <img th:src="${wardrobe.image == null ? 'http://localhost:8080/image/no_image.png' : wardrobe.image.imageServerPath}" id="wardrobe_image_view" class="form-control" style="height: 400px;">
+            <img th:src="${wardrobe.imageServerPath == null ? 'http://localhost:8080/image/no_image.png' : wardrobe.imageServerPath}" id="wardrobe_image_view" class="form-control" style="height: 400px;">
         </div>
 
         <div class="form-group">
-            <input type="button" class="btn btn-dark small" id="btn-likecnt-change" th:disabled="${session.user.email == wardrobe.member.email} ? true : false"
-                   th:value="${wardrobe.likeUser==true} ? '좋아요 취소 ' + ${wardrobe.likeCnt} : '좋아요 ' + ${wardrobe.likeCnt}"/>
+            <input type="button" class="btn btn-dark small" id="btn-likecnt-change" th:disabled="${session.user.email == wardrobe.email} ? true : false"
+                   th:value="${isLike==true} ? '좋아요 취소 ' + ${wardrobe.likeCnt} : '좋아요 ' + ${wardrobe.likeCnt}"/>
         </div>
 
         <br/>
@@ -25,14 +25,14 @@
         <table class="table table-striped">
             <tbody>
             <label style="font-weight: bolder">옷장에 대한 감상평을 남겨주세요!</label>
-            <tr th:each="comment : *{comments}" >
-                <td th:text="${comment.member.name}"></td>
+            <tr th:each="comment : ${comments}" >
+                <td th:text="${comment.memberName}"></td>
                 <td th:text="${comment.content}"></td>
                 <td th:text="${comment.getCreatedDate().getYear()} + '년 '
                 + ${comment.getCreatedDate().getMonthValue()} + '월 '
                 + ${comment.getCreatedDate().getDayOfMonth()} + '일'"></td>
                 <td>
-                    <input type="button" th:if="${comment.member.email == session.user.email}" class="btn btn-dark small" name="btn-comment-delete" th:id="'btn-comment-delete' + ${comment.id}" value="삭제"/>
+                    <input type="button" th:if="${comment.email == session.user.email}" class="btn btn-dark small" name="btn-comment-delete" th:id="'btn-comment-delete' + ${comment.id}" value="삭제"/>
                 </td>
             </tr>
             </tbody>
