--- a/src/main/resources/templates/wardrobe/wardrobes-save.html
+++ b/src/main/resources/templates/wardrobe/wardrobes-save.html
@@ -24,7 +24,8 @@
                     <div id="file-form" class="fileUpload btn btn-dark small">
                         <span>이미지 선택</span>
                         <input type="file" id="file" class="upload" />
-                    </div>                </form>
+                    </div>
+                </form>
             </div>
 
             <div class="form-group">
