--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
     <div class="jumbotron">
         <p class="lead">옷장을 이쁘게 꾸며보세요</p>
         <p>
-            <a class="text-body" href="/member/wardrobe"><span style="font-size:30px;">💁</span>나만의 옷장 꾸미기</a>
+            <a class="text-body" href="/member/wardrobe?page_number=1&page_size=20"><span style="font-size:30px;">💁</span>나만의 옷장 꾸미기</a>
         </p>
 
         <p class="lead">사람들은 주로 무슨 옷을 입을까요?</p>
@@ -21,8 +21,8 @@
         </p>
         <p class="lead">다른 사람들과 나만의 옷장을 공유하세요!</p>
         <p>
-            <a class="text-body" href="/wardrobes"><span style="font-size:30px;">‍👩‍👧‍👦</span>모두의 옷장 구경하기</a> <br/>
-            <a class="text-body" href="/records"> <span style="font-size:30px;">👫</span>모두의 코디 구경하기</a>
+            <a class="text-body" href="/wardrobes?page_number=1&page_size=20"><span style="font-size:30px;">‍👩‍👧‍👦</span>모두의 옷장 구경하기</a> <br/>
+            <a class="text-body" href="/records?page_number=1&page_size=20"> <span style="font-size:30px;">👫</span>모두의 코디 구경하기</a>
         </p>
     </div>
 
