[리팩토링] Cloth 관련 API Session 제거
Wardrobe Session 제거와 사유 동일

--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -11,6 +11,7 @@
     <div class="navbar-dark" style="margin-bottom: 30px;">
         <div th:if="${session.user != null}" class ="member-name-label">
             <span th:text="'옷장러 ' + ${session.user.getName() + '님 안녕하세요 😊'}" style="font-size:14px;"></span>
+            <span id="session_email" th:text="${session.user.getEmail()}" style="display:none;"></span>
         </div>
     </div>
 </div>
