--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="footer" th:fragment="footer">
     <p>&copy;Copyright 이윤복. 나만의 옷장 v1</p>
+    <!-- jquery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+
+    <!-- js -->
+    <script src="/js/app/clothes.js"></script>
+    <script src="/js/app/wardrobes.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </div>
+</html>
