--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
 <div class="header" th:fragment="bodyHeader">
 
     <div class="topNav" style="text-align: center; margin-bottom: 30px;">
         <a href="/">
-            <img class="img-fluid" src="/image/title_image.png" alt="타이틀 이미지"/>
+            <img class="img-fluid" src="/images/title_image.png" alt="타이틀 이미지"/>
         </a>
     </div>
 
     <div class="navbar-dark" style="margin-bottom: 30px;">
-        <div th:if="${session.user != null}" class ="member-name-label">
-            <span th:text="'옷장러 ' + ${session.user.getName() + '님 안녕하세요 😊'}" style="font-size:14px;"></span>
-            <input type="text" id="session_email" th:value="${session.user.getEmail()}" style="display:none;">
+        <div th:if="${session.member != null}" class ="member-name-label">
+            <span th:text="'옷장러 ' + ${session.member.getName() + '님 안녕하세요 😊'}" style="font-size:14px;"></span>
+            <input type="text" id="session_email" th:value="${session.member.getEmail()}" style="display:none;">
         </div>
     </div>
 </div>
