--- a/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
+++ b/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="form-group">
-            <input type="button" class="btn btn-dark small" id="btn-likecnt-change" th:disabled="${session.user.email == wardrobe.email} ? true : false"
+            <input type="button" class="btn btn-dark small" id="btn-likecnt-change" th:disabled="${session.member.email == wardrobe.email} ? true : false"
                    th:value="${isLike==true} ? '좋아요 취소 ' + ${wardrobe.likeCnt} : '좋아요 ' + ${wardrobe.likeCnt}"/>
         </div>
 
@@ -32,7 +32,7 @@
                 + ${comment.getCreatedDate().getMonthValue()} + '월 '
                 + ${comment.getCreatedDate().getDayOfMonth()} + '일'"></td>
                 <td>
-                    <input type="button" th:if="${comment.email == session.user.email}" class="btn btn-dark small" name="btn-comment-delete" th:id="'btn-comment-delete' + ${comment.id}" value="삭제"/>
+                    <input type="button" th:if="${comment.email == session.member.email}" class="btn btn-dark small" name="btn-comment-delete" th:id="'btn-comment-delete' + ${comment.id}" value="삭제"/>
                 </td>
             </tr>
             </tbody>
